--- a/pypi-package/static-site/index.html
+++ b/pypi-package/static-site/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
-  <head></head>
+<html><head></head>
   <body>
     <script src="scripts/index.js" type="module"></script>
-    <ul></ul>
-  </body>
-</html>
+    <ul><li><a href="notes/test copy 2.html" id="testcopy2">test copy 2</a></li><li><a href="notes/test copy 3.html" id="testcopy3">test copy 3</a></li><li><a href="notes/test copy.html" id="testcopy">test copy</a></li><li><a href="notes/test.html" id="test">test</a></li></ul>
+  
+
+</body></html>
