--- a/pypi-package/static-site/index.html
+++ b/pypi-package/static-site/index.html
@@ -2,7 +2,7 @@
 <html><head></head>
   <body>
     <script src="scripts/index.js" type="module"></script>
-    <ul><li><a href="notes/test copy 2.html" id="testcopy2">test copy 2</a></li><li><a href="notes/test copy 3.html" id="testcopy3">test copy 3</a></li><li><a href="notes/test copy.html" id="testcopy">test copy</a></li><li><a href="notes/test.html" id="test">test</a></li></ul>
+    <ul><li><a href="https://storage.cloud.google.com/first-bloggen-bucket/static-site/notes/BLE%20Mesh.html" id="BLEMesh">BLE Mesh</a></li><li><a href="https://storage.cloud.google.com/first-bloggen-bucket/static-site/notes/Banana%20Song.html" id="BananaSong">Banana Song</a></li><li><a href="https://storage.cloud.google.com/first-bloggen-bucket/static-site/notes/Faulty%20Premise.html" id="FaultyPremise">Faulty Premise</a></li><li><a href="https://storage.cloud.google.com/first-bloggen-bucket/static-site/notes/test%20copy.html" id="testcopy">test copy</a></li><li><a href="notes/BLE Mesh.html" id="BLEMesh">BLE Mesh</a></li><li><a href="notes/Banana Song.html" id="BananaSong">Banana Song</a></li><li><a href="notes/Faulty Premise.html" id="FaultyPremise">Faulty Premise</a></li><li><a href="notes/TODO.html" id="TODO">TODO</a></li><li><a href="notes/test copy.html" id="testcopy">test copy</a></li><li><a href="notes/test.html" id="test">test</a></li></ul>
   
 
 </body></html>
